# th2-box-descriptor-generator-py

./: README.md  pyproject.toml
.github/workflows/: dev-build-to-pypi.yml
th2_box_descriptor_generator/: generate_service_descriptions.py
